--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,58 @@
-#container {
-  text-align: center;
+* {
+  font-weight: bold;
+}
 
-  position: absolute;
+ion-item{
+  ion-thumbnail{
+    img{
+      border-radius: 10px;
+    }
+  }
+
+ion-label{
+  h2, p{
+    font-weight: bold;
+  }
+}
+}
+
+#miniPlayer {
+  box-shadow:  0px -4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px 10px 0 0;
+transition: 0.5s;
+bottom: -100px;
+
+ion-progress-bar{
+  z-index: 10;
+}
+
+}
+
+#fullPlayer {
+  transition: 0.5s;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  background-color: #ffffff;
+  z-index: 20;
+  bottom: -1000px;
+
+#currImg{
+  margin-top: 30px;
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
+p{
+  color: #080707;
   margin: 0;
 }
 
-#container a {
-  text-decoration: none;
+ion-text{
+  font-size: medium;
 }
+
+}
+
