--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,6 +25,13 @@ bottom: -100px;
 ion-progress-bar{
   z-index: 10;
 }
+ion-button{
+  color: #080707;
+}
+p{
+  color: #ff0000;
+  margin: 0;
+}
 
 }
 
@@ -46,13 +53,14 @@ ion-progress-bar{
 }
 
 p{
-  color: #080707;
+  color: #ff0000;
   margin: 0;
 }
 
 ion-text{
   font-size: medium;
 }
+
 
 }
 
