--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -59,6 +59,9 @@
   </ion-tabs>
 
   <ion-toolbar>
+    <ion-buttons class="searches">
+      <ion-icon class="icon" name="search"></ion-icon>
+  </ion-buttons>
     <ion-buttons slot="start">
       <ion-button (click)="minimize()">
         <ion-icon name ="chevron-down-outline" ></ion-icon>
