--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -63,4 +63,16 @@ ion-text{
 
 
 }
-
+.searches{
+  position: absolute;
+  top: 0px;
+  right: 4px;
+  margin-top: 5px;
+  margin-right: 7px;
+  color: #000000;
+}
+.icon {
+  font-size: 30px;
+  margin-top: 5px;
+ 
+}
