--- a/src/app/onboarding/onboarding.component.html
+++ b/src/app/onboarding/onboarding.component.html
@@ -1,7 +1,7 @@
 <ion-header mode="ios" class="ion-no-border ion-padding">
 	<ion-toolbar class="p-0">
 		<div class="flex items-center justify-between">
-			<img src="/assets/img/logo.png" class="h-6 sm:h-8" />
+			<img src="/assets/img/logo999.png" class="h-6 sm:h-8" />
 			<ion-button
 				data-testid="onboarding__skip"
 				size="small"
