--- a/src/app/wallets/wallet-list/wallet-list.component.html
+++ b/src/app/wallets/wallet-list/wallet-list.component.html
@@ -19,42 +19,42 @@
 			<wallet-card
 				name="name"
 				balance="2000452000000"
-				currency="ARK"
+				currency="LBSC"
 				address="address"
 				(openWalletClick)="navigateToWalletDetails(wallet?.address)"
 			></wallet-card>
 			<wallet-card
 				name="name"
 				balance="2000452000000"
-				currency="ARK"
+				currency="LBSC"
 				address="address"
 				(openWalletClick)="navigateToWalletDetails(wallet?.address)"
 			></wallet-card>
 			<wallet-card
 				name="name"
 				balance="2000452000000"
-				currency="ARK"
+				currency="LBSC"
 				address="address"
 				(openWalletClick)="navigateToWalletDetails(wallet?.address)"
 			></wallet-card>
 			<wallet-card
 				name="name"
 				balance="2000452000000"
-				currency="ARK"
+				currency="LBSC"
 				address="address"
 				(openWalletClick)="navigateToWalletDetails(wallet?.address)"
 			></wallet-card>
 			<wallet-card
 				name="name"
 				balance="2000452000000"
-				currency="ARK"
+				currency="LBSC"
 				address="address"
 				(openWalletClick)="navigateToWalletDetails(wallet?.address)"
 			></wallet-card>
 			<wallet-card
 				name="name"
 				balance="2000452000000"
-				currency="ARK"
+				currency="LBSC"
 				address="address"
 				(openWalletClick)="navigateToWalletDetails(wallet?.address)"
 			></wallet-card>
