--- a/src/app/view-users/view-users.page.html
+++ b/src/app/view-users/view-users.page.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <ion-content class="cards-background-page">
-    <ion-segment scrollable color=danger value="Live" (ionChange)="segmentChanged($event)">
+    <ion-segment scrollable color="danger" value="Live" (ionChange)="segmentChanged($event)">
         <ion-segment-button value="Live">
             <ion-icon name="Headset"></ion-icon>
             Live
@@ -44,8 +44,8 @@
 </ion-segment> -->
     <ion-infinite-scroll>
         <div *ngIf="live">
-            <ion-card *ngFor="let record of records" button="true" (click)="playSong(record.Recordname,record.artistname,record.imgURL,record.liveaudio)">
-                <ion-img src={{record.imgURL}}></ion-img>
+            <ion-card *ngFor="let record of records" button="true" (click)="playSong2(record.Recordname,record.artistname2,record.imgURL2,record.liveaudio)">
+                <ion-img src={{record.imgURL2}}></ion-img>
                 <div class="card_content">
                     <p class="card-title">{{record.Recordname}}</p>
                 </div>
@@ -73,7 +73,7 @@
 
 
 
-<div class="ion-text-center" id="fullPlayer">
+<div *ngIf="isMostra||!isMostra2" class="ion-text-center" id="fullPlayer"><!-- mettere una variabile per ngif con isMostra -->
 
     <ion-tabs>
         <!-- Tab bar -->
@@ -128,7 +128,7 @@
 
 
     <p>
-        {{currSongname}},{{currRecordname}}
+        {{currSongname}}
     </p>
     <u>
       {{currArtistname}}
@@ -220,6 +220,168 @@
         <ion-progress-bar value="{{progress}}"></ion-progress-bar>
     </ion-toolbar>
 </div>
+
+
+
+<!-- Record -->
+
+
+
+
+<div  *ngIf="!isMostra||isMostra2" class="ion-text-center" id="fullPlayer2">
+
+    <ion-tabs>
+        <!-- Tab bar -->
+
+        <ion-tab-bar slot="bottom">
+            <td>
+                <ion-tab-button id="love">
+                    <ion-icon name="heart"></ion-icon>
+                    <ion-label>Favourite</ion-label>
+                </ion-tab-button>
+            </td>
+            <td>
+                <ion-tab-button id="shuffle" tab="shuffle">
+                    <ion-icon name="shuffle"></ion-icon>
+                    <ion-label>Shuffle</ion-label>
+                </ion-tab-button>
+            </td>
+            <td>
+                <ion-tab-button id="repeat" tab="repeat">
+                    <ion-icon name="repeat"></ion-icon>
+                    <ion-label>Repeat</ion-label>
+                </ion-tab-button>
+            </td>
+            <td>
+                <ion-tab-button id="options" tab="options">
+                    <ion-icon name="options"></ion-icon>
+                    <ion-label>Options</ion-label>
+                </ion-tab-button>
+            </td>
+        </ion-tab-bar>
+    </ion-tabs>
+
+    <ion-toolbar>
+        <ion-buttons class="searches">
+            <ion-icon class="iconsearch" name="search"></ion-icon>
+        </ion-buttons>
+        <ion-buttons slot="start">
+            <ion-button (click)="minimize2()">
+                <ion-icon class="iconback" name="chevron-down-outline"></ion-icon>
+                <svg style="width:24px;height:24;" viewbox="0 0 24 24" slot="icon-only">
+          <path fill="currentColor"  >
+
+          </path>
+        </svg>
+            </ion-button>
+
+        </ion-buttons>
+
+    </ion-toolbar>
+
+    <img src="{{currImage}}" alt="" id="currImg">
+
+
+    <p>
+        {{currRecordname}}
+    </p>
+    <u>
+      {{currArtistname}}
+  </u>
+
+    <ion-item lines="nome">
+        <ion-range #range (touchmove)="touchMove2()" (touchend)="touchEnd2()" (touchstart)="touchStart2()" max="{{maxRangeValue2}}" [(ngModel)]="currRangeTime2">
+            <ion-label slot="start">
+                <ion-text>
+                    <b>
+            {{currSecsText2}}
+          </b>
+                </ion-text>
+
+            </ion-label>
+            <ion-label slot="end">
+                <ion-text>
+                    <b>
+            {{durationText2}}
+          </b>
+                </ion-text>
+            </ion-label>
+
+        </ion-range>
+    </ion-item>
+    <ion-button fill="clear" mode="ios" (click)="playPrev2()">
+        <ion-icon name="play-skip-back-outline" style="font-size: 30px;"></ion-icon>
+    </ion-button>
+
+    <ion-button fill="clear" mode="ios" *ngIf="!isPlaying2 " (click)="play2()">
+        <ion-icon name="play" style="font-size: 40px;"></ion-icon>
+    </ion-button>
+
+    <ion-button fill="clear" mode="ios" *ngIf="isPlaying2" (click)="pause2()">
+        <ion-icon name="pause" style="font-size: 40px;"></ion-icon>
+    </ion-button>
+
+    <ion-button fill="clear" mode="ios" (click)="playNext2()">
+        <ion-icon name="play-skip-forward-outline" style="font-size: 30px;"></ion-icon>
+    </ion-button>
+
+    <ion-list-header>
+        up Next
+    </ion-list-header>
+    <ion-item>
+        <ion-thumbnail slot="start">
+            <img src="{{upNextImg2}}" />
+
+        </ion-thumbnail>
+        <ion-label>
+            <h2>
+                {{upNextRecordname}}
+            </h2>
+            <p>
+                {{upNextArtistname2}}
+            </p>
+        </ion-label>
+    </ion-item>
+
+</div>
+<div id="miniPlayer2" *ngIf="isPlaying2 || !isShow2">
+    <ion-toolbar>
+        <ion-item>
+            <ion-thumbnail slot="start" (click)="maximize2()">
+                <img src="{{currImage}}" />
+            </ion-thumbnail>
+            <ion-label (click)="maximize2()">
+                <h2>
+                    {{currRecordname}}
+                </h2>
+                <p>{{currArtistname}}</p>
+
+            </ion-label>
+            <ion-button fill="clear" mode="ios" *ngIf="!isPlaying2" (click)="play2()">
+                <ion-icon name="play" style="font-size: x-large;"></ion-icon>
+            </ion-button>
+
+            <ion-button fill="clear" mode="ios" *ngIf="isPlaying2" (click)="pause2()">
+                <ion-icon name="pause" style="font-size: x-large;"></ion-icon>
+            </ion-button>
+
+            <ion-button fill="clear" mode="ios" (click)="cancel2()">
+                <ion-icon name="close" style="font-size: x-large;"></ion-icon>
+            </ion-button>
+
+
+        </ion-item>
+
+        <ion-progress-bar value="{{progress}}"></ion-progress-bar>
+    </ion-toolbar>
+</div>
+
+
+
+
+
+
+
 <ion-infinite-scroll-content>
 
     <ion-searchbar showcancelbutton="" [(ngModel)]="searchTerm" (ionChange)="setFiltered()"></ion-searchbar>
